system/controllers/network/netbird/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: netbird
  namespace: netbird
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: netbird
  template:
    metadata:
      labels:
        app.kubernetes.io/name: netbird
    spec:
      automountServiceAccountToken: false
      securityContext:
        sysctls:
          - name: net.ipv4.ip_forward
            value: "1"
      containers:
        - name: netbird
          image: netbirdio/netbird:0.64.3
          securityContext:
            capabilities:
              add:
                - NET_ADMIN
                - SYS_RESOURCE
                - SYS_ADMIN
          resources:
            requests:
              cpu: "50m"
              memory: "64Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"
          volumeMounts:
            - name: netbird-data
              mountPath: /var/lib/netbird
      volumes:
        - name: netbird-data
          emptyDir: {}
