system/controllers/network/netbird/network-policy.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: netbird
  namespace: netbird
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: netbird
  egress:
    # WireGuard + Netbird management
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "51820"
              protocol: UDP
            - port: "443"
              protocol: TCP
            - port: "3478"
              protocol: UDP
    # Gateway access (192.168.1.240/30)
    - toCIDR:
        - 192.168.1.240/30
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
            - port: "443"
              protocol: TCP
    # DNS
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
  ingress:
    - fromEntities:
        - world
      toPorts:
        - ports:
            - port: "51820"
              protocol: UDP
